<resources>
    <string name="app_name">Ayudas DRAI</string>
    <string name="app_label">Reportar Solicitud</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre: </string>
    <string name="nombre_hint">Ingresa tu Nombre </string>
    <string name="solicitud">Solicitud: </string>
    <string name="bloque">Bloque: </string>
    <string name="aula">Aula: </string>
    <string name="aula_hint">Ingresa el Aula</string>
    <string name="descripcion">Descripción: </string>
    <string name="descripcion_hint">Ingresa una Descripción, si se requiere</string>
    <string name="enviar">Enviar Reporte</string>

    <string name="base_url">http://172.21.37.158:8084/AyudasDRAI/rest</string>
    <string name="reporte_rest">/Reporte</string>
    <string name="admin_rest">/Admin</string>

    <string name="error_campo_nulo">Alguno de los campos se encuentra vacio.
        \n Por favor verifica la informacion y vuelve a intentarlo</string>
    <string name="error_conexion">Ocurre un problema al conectarse con la red
        \n o esta conexion es demasiado lenta.
        \n Por favor verifica tu conexion a internet e intentalo nuevamente</string>
    <string name="error_tiempo_tarea">La tarea esta tardando mas de lo adecuado.
        \n Por favor verifica tu conexion a internet e intentalo nuevamente</string>
     <string name="error_aula_invalida">El aula que se ha espedificado no corresponde al bloque indicado.
        </string>
    <string name="enviando_solicitud">Enviando solicitud</string>


    <string-array name="solicitudes">
        <item>Abrir Aula</item>
        <item>Cerrar Aula</item>
        <item>Soporte</item>
    </string-array>

    <string-array name="bloques">
        <item>10</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>




</resources>
